First working crawler, still trying to get predestroy hook working